feat: 배틀 기능 개발
- match domain 구조 수정